// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Motif test suite should generate createMotif based on chord 1`] = `
Array [
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 64,
    "next": 240,
    "note": "E3",
    "time": 0,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 64,
    "next": 960,
    "note": "E3",
    "time": 240,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 1440,
    "note": "E3",
    "time": 960,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 61,
    "next": 1920,
    "note": "Db3",
    "time": 1440,
  },
]
`;

exports[`A Motif test suite should generate createMotif based on chord 2`] = `
Array [
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 240,
    "note": "Ab3",
    "time": 0,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 64,
    "next": 960,
    "note": "E3",
    "time": 240,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 1440,
    "note": "Ab3",
    "time": 960,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 1920,
    "note": "E3",
    "time": 1440,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 68,
    "next": 2400,
    "note": "Ab3",
    "time": 1920,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 2640,
    "note": "Ab3",
    "time": 2400,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 68,
    "next": 2880,
    "note": "Ab3",
    "time": 2640,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 64,
    "next": 3360,
    "note": "E3",
    "time": 2880,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 61,
    "next": 3840,
    "note": "Db3",
    "time": 3360,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 1`] = `
Array [
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 71,
    "next": 240,
    "note": "B3",
    "time": 0,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 73,
    "next": 960,
    "note": "C#4",
    "time": 240,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 1440,
    "note": "C#4",
    "time": 960,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 69,
    "next": 1920,
    "note": "A3",
    "time": 1440,
  },
]
`;

exports[`A Motif test suite should generate motif based on scale 2`] = `
Array [
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 240,
    "note": "E4",
    "time": 0,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 73,
    "next": 960,
    "note": "C#4",
    "time": 240,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 76,
    "next": 1440,
    "note": "E4",
    "time": 960,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 1920,
    "note": "C#4",
    "time": 1440,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 74,
    "next": 2400,
    "note": "D4",
    "time": 1920,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 2640,
    "note": "E4",
    "time": 2400,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 76,
    "next": 2880,
    "note": "E4",
    "time": 2640,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 73,
    "next": 3360,
    "note": "C#4",
    "time": 2880,
  },
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 69,
    "next": 3840,
    "note": "A3",
    "time": 3360,
  },
]
`;

exports[`A Motif test suite should generate motif with given durations 1`] = `
Array [
  Object {
    "dur": 480,
    "isRest": false,
    "midi": 74,
    "next": 480,
    "note": "D4",
    "time": 0,
  },
  Object {
    "dur": 960,
    "isRest": false,
    "midi": 78,
    "next": 1440,
    "note": "F#4",
    "time": 480,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 73,
    "next": 1800,
    "note": "C#4",
    "time": 1440,
  },
]
`;

exports[`A Motif test suite should generate motif with rests 1`] = `
Array [
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 80,
    "next": 240,
    "note": "G#4",
    "time": 0,
  },
  Object {
    "dur": 720,
    "isRest": false,
    "midi": 74,
    "next": 480,
    "note": "D4",
    "time": 240,
  },
  Object {
    "dur": 120,
    "isRest": true,
    "midi": -1,
    "next": 600,
    "note": "",
    "time": 480,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 80,
    "next": 960,
    "note": "G#4",
    "time": 600,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 78,
    "next": 1280,
    "note": "F#4",
    "time": 960,
  },
  Object {
    "dur": 160,
    "isRest": true,
    "midi": -1,
    "next": 1440,
    "note": "",
    "time": 1280,
  },
  Object {
    "dur": 80,
    "isRest": true,
    "midi": -1,
    "next": 1520,
    "note": "",
    "time": 1440,
  },
  Object {
    "dur": 240,
    "isRest": false,
    "midi": 74,
    "next": 1760,
    "note": "D4",
    "time": 1520,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 76,
    "next": 2120,
    "note": "E4",
    "time": 1760,
  },
]
`;

exports[`A Motif test suite should return pattern with time = start time 1`] = `
Array [
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 64,
    "next": 800,
    "note": "E3",
    "time": 480,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 70,
    "next": 960,
    "note": "Bb3",
    "time": 800,
  },
  Object {
    "dur": 320,
    "isRest": false,
    "midi": 68,
    "next": 1280,
    "note": "Ab3",
    "time": 960,
  },
  Object {
    "dur": 160,
    "isRest": false,
    "midi": 68,
    "next": 1440,
    "note": "Ab3",
    "time": 1280,
  },
  Object {
    "dur": 360,
    "isRest": false,
    "midi": 70,
    "next": 1800,
    "note": "Bb3",
    "time": 1440,
  },
  Object {
    "dur": 120,
    "isRest": false,
    "midi": 68,
    "next": 1920,
    "note": "Ab3",
    "time": 1800,
  },
]
`;
